--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "gh-pages": "^4.0.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-pwa": "^0.12.0"
   }
 }
